# hisinad

./: CMakeLists.txt  README  README.md
aux/: system.h
aux/fonts/: font.h  monaco.h  monaco32_fixedsize_rawbb_2bpp.c  render.c  render.h
cfg/: sensor_config.c  sensor_config.h  vdacfg.c  vdacfg.h
devices/BLK18E_0042/: desc.txt
devices/BLK18E_0042/reverse/: i2cdump.txt  ipctool-reginfo.txt  ipctool.txt  proc-umap-vi.txt
doc/: IVE.txt  mmz.txt
evcurl/: evcurl.c  evcurl.h
hisinad/: daemon.c
hitiny/: hitiny_ive.c  hitiny_ive.h  hitiny_region.c  hitiny_region.h  hitiny_sys.c  hitiny_sys.h  hitiny_vda.c  hitiny_vda.h  hitiny_venc_fd.c  hitiny_vi.c  hitiny_vi.h
imx225_i2c/: imx225_cmos.c  imx225_sensor_ctl.c
imx225_i2c_960h/: imx225_cmos.c  imx225_sensor_ctl.c
imx225_spi/: imx225_cmos.c  imx225_sensor_ctl.c
jxh22_i2c/: jxh22_cmos.c
jxh427_i2c/: jxh42_cmos.c
jxh42_i2c/: jxh42_cmos.c  jxh42_sensor_ctl.c
platform/: sdk.h  sdk_audio.c  sdk_audio_junk.c  sdk_audio_tiny.c  sdk_isp.c  sdk_sys.c  sdk_ugly.c
test/: test_ao.c  test_ao_tiny.c  test_jpeg.c  test_jpeg_dn.c  test_jpeg_nosdk.c  test_jpeg_rgn.c  test_jpeg_rgn_nosdk.c  test_md.c  test_mmz.c  test_mmz_sdk.c  test_tinydraw_0.c  test_tinydraw_1.c  test_tinydraw_2.c  test_vi_ext.c  used_functions
test/data/test_ao/: a-dur.pcm
test/data/test_cfg_read/: 9.ini
test/sample_audio/: sample_comm.h
tinydraw/: font.c  font.h  image.c  image.h  monaco32.h  monaco32_fixedsize_rawbb_2bpp.c  save_bmp.c
tools/: hi_vireg.c  histodiffer.c  pwm1_manager.c  vi_dump.c  vi_dump_nosdk.c  vi_ive_hist.c
tools/hisina-md-tune/: main.c  mjpeg_snap.c
